# usb_camera_interface

./: .gitignore  .vimspector.json  CMakeLists.txt  compile_commands.json  doxygen.dox  neovim.json  package.xml
.cache/clangd/index/: usb_camera_interface.cpp.76F629C41663A97C.idx  usb_camera_interface.hpp.53F5B8B4604C7ECF.idx  usb_camera_interface_node.cpp.EBFE91217134F606.idx
config/aruco_gate_detector/: real_params.yaml  sim_params.yaml
config/tf_cam/: f450_arguments.yaml
config/usb_cam/: params.yaml
config/usb_camera_interface/: camera_info.yaml  params.yaml  params_gate.yaml  wide03_1080_info.yaml  wide03_720_info.yaml
include/usb_camera_interface/: usb_camera_interface.hpp
launch/: new_usb_camera_interface_launch.py  old_usb_camera_interface_launch.py  usb_camera_interface_launch.py
src/: usb_camera_interface.cpp  usb_camera_interface_node.cpp
